# PreAA

./: .gitignore  CMakeLists.txt  README.md
examples/: bivariate_polynomial_example.cpp  rosenbrock_example.cpp  simple_example.cpp  trigonometric_example.cpp
include/: preAA.h  preAAParam.h
